--- a/props/index.html
+++ b/props/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>React-props</title>
 </head>
+
 <body>
   <div id="root"></div>
 </body>
@@ -14,11 +16,11 @@
 <script src="https://unpkg.com/prop-types@15.7.2/prop-types.js"></script>
 <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
 <script type="text/babel">
-  function Btn( { text, fontSize = 12, onClick } ) {
+  function Btn({ text, fontSize = 12, onClick }) {
     return (
-      <button 
-        onClick = {onClick} // 이벤트
-        style = {{
+      <button
+        onClick={onClick} // 이벤트
+        style={{
           backgroundColor: "skyblue",
           color: "white",
           padding: "10px 20px",
@@ -37,7 +39,7 @@
     fontSize: PropTypes.number,
   };
 
-  // 자식 컴포넌트 중에 바뀌는 컴포넌트만 다시 랜더링 해준다.(속도up)
+  // 자식 컴포넌트 중에 바뀌는 컴포넌트만 다시 렌더링 해준다.(속도up)
   // const MemorizeBtn = React.memo(Btn);
 
   function App() {
@@ -58,4 +60,5 @@
   const root = document.getElementById("root");
   ReactDOM.render(<App />, root);
 </script>
+
 </html>
